--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "element-ui": "^1.4.7",
+    "element-ui": "^2.0.0-beta.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
